--- a/donate.html
+++ b/donate.html
@@ -50,7 +50,7 @@
                 <div class="p5">
                     <p>1500</p>
                 </div>
-            </div>
+            </div><br>
             <div class="donation-amount">
                 <form action="">
                     <input type="text" name="" id="" placeholder="Other Amount (Taka)"><br>
@@ -71,8 +71,7 @@
         <div class="design-part-3">
 
             <div class="half-width-1">
-                <i class="fa-solid fa-bowl-food"></i>
-                <h1>Food for a family</h1>
+                <h1> Food for a family</h1>
                 <p>
                     Family meals provide an opportunity for family members to come together, strengthen ties and build
                     better relationships. In our overscheduled lives being together with family at dinner is really
@@ -91,6 +90,42 @@
                 <p>It's more important that you help develop an interest and joy for the act of learning than to try and
                     get them to remember your lessons. As a teacher of young children, your primary goal should be to
                     teach them how to learn and to inspire them to love learning.</p>
+            </div>
+        </div>
+    </section>
+    <section class="padma">
+        <div class="padma-width">
+            <div class="padma-img">
+                <img src="Padma-Bridge.jpg" alt="">
+            </div>
+            <div class="padma-details">
+                <h1>This is Padma-Bridge</h1>
+                <p>The Padma Multipurpose Bridge is a two-level road-rail bridge across the Padma River, the main
+                    distributary of the Ganges in Bangladesh.It connects Shariatpur and Madaripur, linking the
+                    southwest of the country to the northern and eastern regions. The bridge was inaugurated on 25 June
+                    2022.
+                    Considered to be the most challenging construction project in the history of Bangladesh, the steel
+                    truss bridge carries a four-lane highway on the upper level and a single track railway on the lower
+                    level.The bridge consists of 41 sections, each 150.12 m (492.5 ft) long and 22.5 m (74 ft) wide,
+                    with a total length of 6.15 km (3.82 mi).It is the longest bridge in Bangladesh, the longest
+                    bridge over the river Ganges by both span and total length, and features the highest pile depth of
+                    any bridge in the world at 120 m (390 ft).</p>
+                <br>
+                <a class="padma-btn" target="_blank" href="https://en.wikipedia.org/wiki/Padma_Bridge">Padma Bridge</a>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <div class="info">
+                <h1>Get My Updates</h1>
+                <p>Welcome to my Donation page. Hope so, all of you gyus are donate on this flooded peoples.</p>
+            </div><br>
+            <div class="email">
+                <form action="">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <button class="subscribe-btn">Subscribe</button>
+                </form>
             </div>
         </div>
     </section>
